# vibe-coding

PRUEBA 1/: autocomplete.py  getting_started.md
poc 1/: README.md  autocomplete.py  code_with_bug.c  explain_code.c
poc 2/: .gitignore  README.md  pyproject.toml
poc 2/src/app/: main.py
poc 3/python/: calculadora.py  main.py  operacion.py  suma.py
poc 3/src/: Calculadora.java  Main.java  Operacion.java  Suma.java
poc 5/.history/: pom_20251013223434.xml
poc 6/: .cursorignore
poc 6/.history/: .cursorignore_20251016164259  Calculadora_20251016162800.java  Calculadora_20251016164744.java  Calculadora_20251016164813.java  Calculadora_20251016165049.java  Calculadora_20251016165053.java  Calculadora_20251016165056.java  Calculadora_20251016165101.java  Calculadora_20251016165102.java  Calculadora_20251016170115.java  Calculadora_20251016170117.java  Calculadora_20251016170121.java  Calculadora_20251016170126.java  Calculadora_20251016170755.java  Calculadora_20251016170756.java  Calculadora_20251016170758.java  Calculadora_20251016170759.java  Calculadora_20251016170803.java  Calculadora_20251016170807.java  Calculadora_20251016170809.java  Calculadora_20251016170811.java  Calculadora_20251016170815.java  Calculadora_20251016170818.java  Calculadora_20251016170835.java  Calculadora_20251016170836.java  Calculadora_20251016170838.java  Calculadora_20251016170839.java  Calculadora_20251016170840.java  Calculadora_20251016170842.java  Calculadora_20251016170843.java  README_20251016162800.md  README_20251016164754.md  README_20251016164756.md  (+18 more)
(+244 files in other folders)
